Update 2023 NFL Season Summary Stats.ipynb

--- a/2023 NFL Season Summary Stats.ipynb
+++ b/2023 NFL Season Summary Stats.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## Exploring your own dataset\n",
     "\n",
-    I will be exploring the 2023 NFL play by play data to analyze which teams preformed better/worse in certain categories\n",
+    "I will be exploring the 2023 NFL play by play data to analyze which teams preformed better/worse in certain categories\n",
     Data source: https://nflsavant.com/about.php
-    Click: Download the 2023 play by play data
+    Click: Download the 2023 play by play data"
    ]
   },
   {
